# Context7-Agent

./: .env.example  .gitignore  1_Troubleshooting_Pydantic-AI_and_MCP-Server_Issues.md  2_PYDANTIC_AI_TROUBLESHOOTING.md  2_Troubleshooting_Pydantic-AI_and_MCP-Server_Issues.md  Definitive Architecture Recommendation - Pydantic.AI agent with MCP tool calling.md  Project Architecture Overview Document.md  Pydantic-AI_MCP_guide.md  README.md  Review_PYDANTIC_AI_TROUBLESHOOTING.md  Review_Troubleshooting_Pydantic-AI_and_MCP-Server_Guide.md  currect_project_file_structure.txt  design-1.md  design-2.md  document_pydantic-ai_mcp.md  document_pydantic-ai_mcp_v2.md  document_pydantic-ai_mcp_v3.md  document_pydantic-ai_mcp_v3_review.md  document_pydantic-ai_mcp_v4_final.md  main.py  output_on_Pydantic-AI_with_Context7_MCP_2.md  project_codebase_files_set.md  requirements.txt  requirements.txt.orig  sample-1.md  sample-2.md  sample_code_pydantic-ai_and_MCP_server.md  sample_code_pydantic-ai_and_MCP_server_set-2.md  tips.txt
Grok4/: .env.example  .gitignore  CLAUDE.md  Codebase Compliance Audit Report.md  PYDANTIC_AI_TROUBLESHOOTING.md  README.md  Troubleshooting_Pydantic-AI_and_MCP-Server_Guide.md  design-grok4-improved.md  fixed_grok4_design-2.md  original_grok4_design-1.md  original_grok4_design-2.md  output.md  pip-install.txt  prompt.md  pyproject.toml  requirements.txt  session.json  suggested_fix-2.md  suggested_fix-3.md  suggested_fix-4.md  suggested_fix_5.md  suggested_fix_6.md  suggested_fix_8.md  suggested_fix_9.md  test_openai.sh  u1
Grok4/bak.src/: cli.py  history.py
Grok4/docs/: suggested_fix.md  suggested_fix_12.md  suggested_fix_13.md  suggested_fix_14.md  suggested_fix_15.md  suggested_fix_16.md  suggested_fix_17.md  suggested_fix_18.md  suggested_fix_19.md  suggested_fix_20.md  suggested_fix_7.md
Grok4/fixed-1.src/: agent.py  cli.py  history.py
Grok4/gemini/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  27.md  28.md  29.md  3.md  30.md  31.md  32.md  4.md  5.md  6.md  7.md  8.md  9.md
Grok4/improved.src/: cli.py.bak2  config.py.kimi  oo1  oo2  themes.py  utils.py
Grok4/orig-1.src/: __init__.py  agent.py  config.py  themes.py  utils.py
Grok4/orig-improved.src/: agent.py  cli.py  history.py
Grok4/src/: agent.py  cli.py
Grok4/tests/: __init__.py  test_agent.py  test_history.py
Sonnet4/: CLAUDE.md  README.md  n8n_json_documentation.md  output.txt  project_structure.md  pyproject.toml
Sonnet4/src/: .env.example  agent.py  cli.py  config.py  design.md  history.py  themes.py  utils.py
new/: .env.example  .gitignore  28.md  Project Architecture Document.md  README v1.md  README.md  check_pydantic_ai.py  currect_project_file_structure.txt  project_codebase_files_set.md  pyproject.toml  requirements.txt  run.sh  suggested_fix.md  suggested_fix_10.md  suggested_fix_2.md  suggested_fix_3.md  suggested_fix_4.md  suggested_fix_5.md  suggested_fix_6.md  suggested_fix_7.md  suggested_fix_8.md  suggested_fix_9.md  t2.py
(+193 files in other folders)
