[tool.poetry]
name = "context7-agent"
version = "0.1.0"
description = "🚀 Stunning AI agent with Pydantic AI and Context7 MCP for intelligent document discovery"
authors = ["Context7 Team <team@context7.ai>"]
readme = "README.md"
homepage = "https://github.com/context7/context7-agent"
repository = "https://github.com/context7/context7-agent"
keywords = ["ai", "agent", "pydantic-ai", "mcp", "document-search", "tui", "rich"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-ai = {extras = ["openai"], version = "^0.1.0"}
rich = "^13.7.0"
openai = "^1.30.0"
python-dotenv = "^1.0.0"
anyio = "^4.0.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
context7 = "src.cli:main"
context7-agent = "src.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/context7/context7-agent/issues"
"Changelog" = "https://github.com/context7/context7-agent/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
