[project]
name = "context7-agent"
version = "0.1.0"
description = "Immersive CLI agent powered by Pydantic-AI + Context7 MCP"
authors = [{ name = "You" }]
dependencies = [
    "pydantic-ai>=0.3.1",     # Adjust to actual version
    "openai>=1.23.0",
    "rich>=13.7.1",
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.6"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
